test/foof/errors/validation.foo
(if (define (foo x) y)
    'yup
    'nope)
(car (module (x)
       (define (foo x) y)))
bar
(define (baz bar)
  (* 2 bar z))
